
- implementation and stabilization of size_tracking decorator is finished
- new[]/delete[] operators were implemented for managed_base
- implemented new/do_delete and new[]/do_delete_arr operators
  to allocate any data type variables
- implemented is_class type_manip
- implemented shared memory segment allocator