@@ -1,4 +1,2 @@
-
- - complete implementation of unit tests for type manipulation library
- - implement real pointer traits for T* and offset_pointer
- - reorganize implementation of shared_allocators
+ - implement real pointer traits for T* and offset_pointer ver. >1.0
+ - reorganize implementation of shared_allocators  ver. >1.0
